# ubi-emu

./: .gitignore  CMakeLists.txt  Changelog.md  Contributing.md  Dockerfile  License.txt  Readme.md
Src/: CMakeLists.txt
Src/Core/: CMakeLists.txt
Src/Core/Common/: BufferUtils.cpp  BufferUtils.hpp  Constants.hpp  Errors.cpp  Errors.hpp  FileUtils.cpp  FileUtils.hpp  GuidGenerator.cpp  GuidGenerator.hpp  Macros.hpp  StringUtils.cpp  StringUtils.hpp  TimeUtils.cpp  TimeUtils.hpp  Types.hpp  Version.hpp
Src/Core/Config/: ConfigDefaults.cpp  ConfigDefaults.hpp  ConfigValidator.cpp  ConfigValidator.hpp  EmulatorConfig.cpp  EmulatorConfig.hpp
Src/Core/Crypto/: AesEncryptor.cpp  AesEncryptor.hpp  HmacHasher.cpp  HmacHasher.hpp  OwnershipListBuilder.cpp  OwnershipListBuilder.hpp  RsaSigner.cpp  RsaSigner.hpp  ShaHasher.cpp  ShaHasher.hpp  TicketGenerator.cpp  TicketGenerator.hpp  TokenParser.cpp  TokenParser.hpp
Src/Core/Hook/: DetourBuilder.cpp  DetourBuilder.hpp  HookContext.cpp  HookContext.hpp  MinHookManager.cpp  MinHookManager.hpp  TrampolineAllocator.cpp  TrampolineAllocator.hpp
Src/Core/Ini/: IniComment.cpp  IniComment.hpp  IniKey.cpp  IniKey.hpp  IniParser.cpp  IniParser.hpp  IniSection.cpp  IniSection.hpp  IniType.cpp  IniType.hpp  IniValue.cpp  IniValue.hpp
Src/Core/Log/: ConsoleTarget.cpp  ConsoleTarget.hpp  DebugOutputTarget.cpp  DebugOutputTarget.hpp  FileTarget.cpp  FileTarget.hpp  LogLevel.cpp  LogLevel.hpp  LogTarget.cpp  LogTarget.hpp  Logger.cpp  Logger.hpp
Src/Core/Memory/: MemoryAllocator.cpp  MemoryAllocator.hpp  MemoryPatcher.cpp  MemoryPatcher.hpp  MemoryScanner.cpp  MemoryScanner.hpp  PointerGuard.cpp  PointerGuard.hpp
Src/Core/Net/: AddressResolver.cpp  AddressResolver.hpp  DnsCache.cpp  DnsCache.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp  NamedPipeClient.cpp  NamedPipeClient.hpp  NamedPipeServer.cpp  NamedPipeServer.hpp  PacketBuilder.cpp  PacketBuilder.hpp  PacketParser.cpp  PacketParser.hpp  SocketClient.cpp  SocketClient.hpp  SocketServer.cpp  SocketServer.hpp
Src/Core/Platform/: ArchitectureDetector.cpp  ArchitectureDetector.hpp  ExportTable.cpp  ExportTable.hpp  ImportTable.cpp  ImportTable.hpp  LinuxPlatform.cpp  LinuxPlatform.hpp  ModuleLoader.cpp  ModuleLoader.hpp  WindowsPlatform.cpp  WindowsPlatform.hpp
Src/Core/Proto/: DemuxMessage.cpp  DemuxMessage.hpp  DemuxRouter.cpp  DemuxRouter.hpp  ProtoField.cpp  ProtoField.hpp  ProtoSchema.cpp  ProtoSchema.hpp  ProtobufDeserializer.cpp  ProtobufDeserializer.hpp  ProtobufSerializer.cpp  ProtobufSerializer.hpp
Src/EmuDbData/: CMakeLists.txt  DbDataConfigReader.cpp  DbDataConfigReader.hpp  DbDataExports.cpp  DbDataExports.hpp  DbDataInitHandler.cpp  DbDataInitHandler.hpp  DbDataLoader.cpp  DbDataLoader.hpp  DbDataOwnershipHandler.cpp  DbDataOwnershipHandler.hpp  DbDataSecureDlcHandler.cpp  DbDataSecureDlcHandler.hpp  DbDataStateManager.cpp  DbDataStateManager.hpp  DbDataTicketHandler.cpp  DbDataTicketHandler.hpp  DbDataTokenHandler.cpp  DbDataTokenHandler.hpp
Src/EmuOrbit/: CMakeLists.txt  OrbitConfigReader.cpp  OrbitConfigReader.hpp  OrbitDlcHandler.cpp  OrbitDlcHandler.hpp  OrbitExports.cpp  OrbitExports.hpp  OrbitInitHandler.cpp  OrbitInitHandler.hpp  OrbitLoader.cpp  OrbitLoader.hpp  OrbitNetworkHandler.cpp  OrbitNetworkHandler.hpp  OrbitSaveHandler.cpp  OrbitSaveHandler.hpp  OrbitStateManager.cpp  OrbitStateManager.hpp  OrbitUserHandler.cpp  OrbitUserHandler.hpp
Src/EmuR1/: CMakeLists.txt  R1AchievementHandler.cpp  R1AchievementHandler.hpp  R1AvatarHandler.cpp  R1AvatarHandler.hpp  R1ConfigReader.cpp  R1ConfigReader.hpp  R1DlcHandler.cpp  R1DlcHandler.hpp  R1Exports.cpp  R1Exports.hpp  R1FriendHandler.cpp  R1FriendHandler.hpp  R1InitHandler.cpp  R1InitHandler.hpp  R1Loader.cpp  R1Loader.hpp  R1OverlayHandler.cpp  R1OverlayHandler.hpp  R1PartyHandler.cpp  R1PartyHandler.hpp  R1RichPresenceHandler.cpp  R1RichPresenceHandler.hpp  R1SaveHandler.cpp  R1SaveHandler.hpp  R1StateManager.cpp  R1StateManager.hpp  R1UserHandler.cpp  R1UserHandler.hpp
Src/EmuR2/: CMakeLists.txt  R2AchievementHandler.cpp  R2AchievementHandler.hpp  R2ConfigReader.cpp  R2ConfigReader.hpp  R2DlcHandler.cpp  R2DlcHandler.hpp  R2Exports.cpp  R2Exports.hpp  R2InitHandler.cpp  R2InitHandler.hpp  R2Loader.cpp  R2Loader.hpp  R2OverlayHandler.cpp  R2OverlayHandler.hpp  R2PartyHandler.cpp  R2PartyHandler.hpp  R2SaveHandler.cpp  R2SaveHandler.hpp  R2StateManager.cpp  R2StateManager.hpp  R2StatsHandler.cpp  R2StatsHandler.hpp  R2StoreHandler.cpp  R2StoreHandler.hpp  R2UserHandler.cpp  R2UserHandler.hpp
Src/EmuUPC/: CMakeLists.txt  UpcAchievementHandler.cpp  UpcAchievementHandler.hpp  UpcAuthHandler.cpp  UpcAuthHandler.hpp  UpcConfigReader.cpp  UpcConfigReader.hpp  UpcDemuxHandler.cpp  UpcDemuxHandler.hpp  UpcDlcHandler.cpp  UpcDlcHandler.hpp  UpcExports.cpp  UpcExports.hpp  UpcInitHandler.cpp  UpcInitHandler.hpp  UpcLoader.cpp  UpcLoader.hpp  UpcOverlayHandler.cpp  UpcOverlayHandler.hpp  UpcPartyHandler.cpp  UpcPartyHandler.hpp  UpcProductHandler.cpp  UpcProductHandler.hpp  UpcSaveHandler.cpp  UpcSaveHandler.hpp  UpcStateManager.cpp  UpcStateManager.hpp  UpcStoreHandler.cpp  UpcStoreHandler.hpp
Src/Shared/: CMakeLists.txt  DllEntryPoint.cpp  DllEntryPoint.hpp  DllMain.cpp  DllMain.hpp  EmulatorBase.cpp  EmulatorBase.hpp  EmulatorFactory.cpp  EmulatorFactory.hpp  EmulatorInterface.cpp  EmulatorInterface.hpp
Src/Tests/: CMakeLists.txt  CoreTests.cpp  EmuDbDataTests.cpp  EmuOrbitTests.cpp  EmuR1Tests.cpp  EmuR2Tests.cpp  EmuUPCTests.cpp  IntegrationTests.cpp  TestConfig.cpp  TestCrypto.cpp  TestIniParser.cpp  TestLogger.cpp  TestMemory.cpp  TestNet.cpp  TestProto.cpp  TestStorage.cpp  TestThreading.cpp
Src/Tools/: CMakeLists.txt  ColdApiImporter.cpp  ColdApiImporter.hpp  DbDataIniImporter.cpp  DbDataIniImporter.hpp  ExportValidator.cpp  ExportValidator.hpp  GameIdResolver.cpp  GameIdResolver.hpp  GoldbergImporter.cpp  GoldbergImporter.hpp  IniToUbiIniConverter.cpp  IniToUbiIniConverter.hpp  LumaPlayImporter.cpp  LumaPlayImporter.hpp  UnlockerJsonImporter.cpp  UnlockerJsonImporter.hpp
(+33 files in other folders)
